Fixed package dependencies

--- a/Packages/com.vowgan.insight-camera/package.json
+++ b/Packages/com.vowgan.insight-camera/package.json
@@ -4,10 +4,11 @@
   "version": "2.4.1",
   "unity": "2022.3",
   "description": "Third person camera system with controlable tooling for third person games in VRChat.",
-  "vrchatVersion": "2022.1.1",
   "author": {
-    "name": "Momo the Monster",
-    "email": "momodmonster@gmail.com",
-    "url": "https://mmmlabs.com"
+    "name": "Vowgan",
+    "email": "VowganVR@gmail.com"
+  },
+  "vpmDependencies": {
+    "com.vrchat.worlds": "^3.5"
   }
 }
